# openchime

./: .gitignore  Cargo.toml  OAUTH_SECURITY_REVIEW.md  README.md  REVIEW_LOG.md  TESTING.md  TODO_BACKLOG.md  debug_sync.rs  openchime.db.backup_20251125_013751  spec.md  tasks.md  test.sh  test_manual_sync.sh  test_sync  test_sync.rs  test_sync.sh
docs/: DEVELOPMENT.md  database-migration-plan.md
docs/agents/: 2025-11-24T00-58-00Z__fix-compilation__rcd.json
docs/decisions/: encryption-approach.md  encryption-research-summary.md
docs/tasklists/: oauth-security-remediation.md
src/: app.rs  command_handlers.rs  config.rs  error.rs  http_config.rs  lib.rs  main.rs  messages.rs  ui_state.rs
src/alerts/: mod.rs
src/audio/: mod.rs
src/calendar/: common.rs  google.rs  mod.rs  proton.rs
src/database/: accounts.rs  events.rs  mod.rs  schema.sql  settings.rs
src/models/: account.rs  alert.rs  event.rs  meeting.rs  mod.rs  settings.rs  sync.rs
src/ui/: alerts.rs  calendar.rs  mod.rs  settings.rs  styles.rs
src/utils/: circuit_breaker.rs  logging.rs  mod.rs  retry.rs
tests/: e2e_app_workflows.rs  integration_alerts.rs  integration_audio.rs  integration_database.rs
